# rust-opengl-triangle

./: .gitignore  Cargo.toml  README.md  build.rs
assets/shaders/: triangle.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: main.rs  resources.rs  triangle.rs
src/render_gl/: buffer.rs  data.rs  mod.rs  shader.rs
