[package]
name = "open_gl"
version = "0.1.0"
authors = ["Brandon Poole <brandoncpoole@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.33.0", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }
failure = "0.1"
render_gl_derive = { path = "render_gl_derive" }
half = "1.1.1"
nalgebra = "0.18"

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]
